<resources>
    <string name="app_name">Home Media Library</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="login">Вход</string>
    <string name="email">Электронная почта</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="click_to_login">Нажмите для входа в систему</string>
    <string name="click_to_register">Нажмите для регистрации</string>
    <string name="logout">Выход</string>
    <string name="enter_password">Введите пароль</string>
    <string name="info">Информация</string>
    <string name="profile">Профиль</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add_media">Добавить медиа</string>
    <string name="update_media">Изменить медиа</string>
    <string name="media_name">Название</string>
    <string name="media_release_year">Год выпуска</string>
    <string name="media_author">Автор</string>
    <string name="saving">Сохранение...</string>
    <string name="loading">Загрузка...</string>
    <string name="loginName">Логин</string>
    <string name="media_genres">Жанры</string>
    <string name="music">Музыка</string>
    <string name="books">Книги</string>
    <string name="movies">Фильмы</string>
    <string name="media">Медиа</string>
</resources>